k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-flask
spec:
  selector:
    app: hello-flask
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: ClusterIP
